styles/main.css
:root {
  --purple-bg: #290742;
  --dark-bg: #170027;
  --button-bg: #9e6dc2;
  --white: #fff;
  --light-purple: #fbf6ff;
  --green: #4fff4b;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body * {
  font-family: "Roboto", sans-serif;
}

body {
  font-size: 1.6rem;
  -webkit-font-smoothing: antialiased;
}

a,
ul,
li {
  text-decoration: none;
  list-style: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Poppins", sans-serif;
}

#home {
  background: var(--purple-bg);
  padding: 0 1.6rem 6.4rem;

  overflow-x: hidden;
}

.container {
  width: min(116.9rem, 100%);
  margin: 0 auto;
}

/* Header */
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  height: 12.8rem;
}

.header nav {
  display: flex;
  align-items: center;
  flex-wrap: wrap;

  gap: 3.2rem;
}

.header nav.open {
  padding-top: 3.2rem;
  width: 100%;
  height: 100vh;
  position: fixed;
  top: 12.8rem;
  left: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: var(--dark-bg);
}

.header nav li {
  position: relative;
}

.header nav li::before {
  content: "";
  position: absolute;
  left: -0.6rem;
  height: 100%;
  width: 0.2rem;

  transition: background 0.2s;
}

.header nav li:hover::before {
  background: var(--green);
}

.header nav li a {
  color: var(--white);
}

.header #menu-item {
  display: none;
  cursor: pointer;
  width: 4rem;
  height: 4rem;
  border: 0;
  background: transparent url(../public/assets/hamburguer.svg) no-repeat
    center/cover;
}

.header form {
  display: flex;
  align-items: center;
}

.header form input {
  border: 0;
  height: 4.4rem;
  font-size: 1.4rem;
  padding-inline: 2.4rem;
  border-radius: 0.4rem 0 0 0.4rem;
  background: var(--dark-bg);
  color: var(--white);
  outline: none;
}

.header form button {
  cursor: pointer;
  width: 7rem;
  height: 4.4rem;
  border: 0;
  background: var(--button-bg) url(../public/assets/search.svg) no-repeat center;
  border-radius: 0 0.4rem 0.4rem 0;
}

/* Hero */

.hero {
  display: flex;
  align-items: flex-start;

  gap: 3rem;
}

.hero > div {
  display: flex;
  flex-direction: column;
  text-align: left;
}

.hero > div h1 {
  font-size: 3.8rem;
  color: var(--button-bg);
  line-height: 5.4rem;
}

.hero > div p {
  font-size: 1.8rem;
  color: var(--white);
  line-height: 2.7rem;
  margin: 1.6rem 0 2.4rem;
}

.hero > div a {
  font-size: 1.8rem;
  font-weight: 700;
  color: var(--button-bg);

  display: flex;
  gap: 0.8rem;
}

.hero > div a::after {
  content: url(../public/assets/arrow-right.svg);
  width: 2.4rem;
}

.hero img {
  width: 57rem;
}

/* Divisor */

.divisor {
  width: 100%;
  height: 0.3rem;
  background: var(--green);
}

/* Content */
#content {
  background-color: var(--light-purple);
  padding: 6rem 1.6rem;

  overflow: hidden;
}

#content .posts {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: flex-start;

  gap: 13rem;
  margin-bottom: 6.4rem;
}

.posts .post-1 {
  display: flex;
  flex-direction: column;

  gap: 1.6rem;
}

.posts .post-1 small,
.posts aside .side-post-1 small,
.posts aside .side-post-2 small {
  font-size: 1.6rem;
}

.posts .post-1 strong,
.posts aside .side-post-2 strong {
  font-size: 2.4rem;
}

.posts .post-1 p,
.posts aside .side-post-1 p,
.posts aside .side-post-2 p {
  font-size: 1.6rem;
  line-height: 2.4rem;
}

.posts aside {
  display: flex;
  flex-direction: column;

  gap: 2.4rem;
}

.posts aside .side-post-1,
.posts aside .side-post-2 {
  display: flex;
  flex-direction: column;

  gap: 0.8rem;
}

.posts aside .side-post-1 strong {
  font-size: 2.4rem;
  font-family: "Poppins", sans-serif;

  line-height: 3.6rem;
}

aside hr {
  border: 0.5px solid #f2e7fa;
}

#content .cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
  align-items: center;

  gap: 3rem;
}

#content .cards .card {
  display: flex;
  flex-direction: column;

  align-items: center;
  gap: 0.8rem;
}

.card img {
  width: 100%;
}

.card small {
  font-size: 1.6rem;
}

.card strong {
  font-size: 2.4rem;
  line-height: 3.6rem;
}

.card p {
  font-size: 1.6rem;
  line-height: 2.4rem;
}

/* Breakpoints */

@media (max-width: 880px) {
  .header #menu-item {
    display: initial;
  }

  .header nav {
    display: none;
  }

  .header form {
    display: none;
  }

  .hero {
    flex-direction: column;
    align-items: center;
  }

  .hero > div {
    align-items: center;
    text-align: center;
  }

  #content .posts {
    grid-template-columns: 1fr;

    gap: 2.4rem;
  }

  .posts .post-1 img {
    width: 100%;
  }
}

@media (max-width: 992px) {
  html {
    font-size: 54%;
  }
}

@media (max-width: 500px) {
  .hero img {
    width: 40rem;
  }
}

@media (max-width: 364px) {
  .hero img {
    width: 30rem;
  }
}

